--- a/index.html
+++ b/index.html
@@ -12,3 +12,6 @@
 </body>
 </html>
 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor aspernatur fugiat omnis laboriosam quo vero ea nostrum ut quae corporis facere aut minima, velit reiciendis dolores soluta optio ad laudantium!
+
+git config --global user.name "Sebastain Rybar"
+git config --global user.email "sebastinan.rybar.023@pslib.cz"
